2023-06-17 Dusan Jocic <dusanjocic@msn>
	* [Engine] Misc fixes

2023-06-16 Dusan Jocic <dusanjocic@msn>
	* [SoundSystem] Returns false if the sound wasn't freed
	* [Engine] Fixed rare 'bad command byte' error after executing a client command
	* [RenderSystem] Statically allocated tr.images
	* [Engine] Fixed few memory leaks
	* [Linux] Fixed compiling on the Linux platform

2023-05-28 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Rewrote va function
	* [RendererSystem] Added support for the geometry shaders
	
2023-05-15 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Misc fixes
	* [Engine] Fixed compiling
	
2023-05-14 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Misc fixes
	* [Engine] Load dynamic modules in separate thread

2023-05-10 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Fixed some harmless warnings
	* [Engine] Misc fixes
	* [RendererSystem] Moved UploadCinematics code into Backend.
	* [RendererSystem] Moved showing all the images to the screen into Backend

2023-05-01 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Updated copyright year
	* [Cumulative Update] Misc changes	
	* [Engine] Uploaded missing files
	* [Linux] Fixed compiling on the Linux platform
	* [Misc] Updated copyright year
	* [Engine] Fixed obscure pid file bug
	* [Engine] Added file containing IP addresses allowed to execute RCON commands

2022-07-05 Dusan Jocic <dusanjocic@msn.com>
	* [SoundSystem] Added support for the "Effects Extension" (EAX)
	* [RenderSystem] Misc fixes
	* [Libraries] Updated OpenAL library
	* [Libraries] Uploaded missing files
	* [Server] Don't allow @@@ characters in the player name
	* [Server] Bugfix for sv_maxPing and sv_minPing connection issue
	* [Server] Show information about logging of the client only for the first time
	* [Server] Bugfix of message "Player all is not on the server"
	* [Server] Flood protection bugfix
	
2022-07-04 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Moved function messaging system to C++ file
	* [Cumulative Update] Misc changes