@@ -1,5 +1,6 @@
 2023-06-17 Dusan Jocic <dusanjocic@msn>
 	* [Engine] Misc fixes
+	* [Engine] Limit connect packets from one IP address in the past 2 seconds
 
 2023-06-16 Dusan Jocic <dusanjocic@msn>
 	* [SoundSystem] Returns false if the sound wasn't freed
